--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "moongoose": "^0.0.5",
+    "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "supertest": "^7.1.0",
     "tap": "^21.1.0"
+  },
+  "devDependencies": {
+    "mongodb-memory-server": "^10.1.4"
   }
 }
